@@ -34,6 +34,10 @@ Enhancements since 1.0
 - YearMonthDay/TimeOfDay
   Enabled comparisons using Comparable interface
   Added compareTo/isEqual/isAfter/isBefore methods
+  
+- YearMonthDay/TimeOfDay
+  Extra time zone constructor
+  Allows current date and time to be accurately obtained
 
 - Period
   Added constructors to create a Period from two ReadablePartials, such as
